# coriscos

./: .gitignore  Cargo.toml  README.md  example.coriscos.toml
src/: caster.rs  component.rs  geometry.rs  main.rs  material.rs  math.rs  settings.rs  utils.rs
src/component/: camera.rs  caster.rs  hit.rs  mod.rs  ray.rs  scene.rs  world.rs
src/geometry/: mod.rs  sphere.rs
src/material/: diffuse_light.rs  glass.rs  lambert.rs  metal.rs  mod.rs
